Sugati/src/objects/Where_to_go__c.object
<CustomObject>
    <description>Places / Cities</description>
    <fields>
        <fullName>W_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Continent__c</fullName>
        <formula>W_Country__r.C_Continent__r.Name</formula>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Where to go</relationshipLabel>
        <relationshipName>Where_to_go</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>W_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>W_Duration__c</fullName>
        <inlineHelpText>In Day&apos;s</inlineHelpText>
        <label>Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W_Estimated_Cost__c</fullName>
        <inlineHelpText>In ORG currency</inlineHelpText>
        <label>Estimated Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>W_Holiday_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holiday Type</label>
        <referenceTo>Holiday_Type__c</referenceTo>
        <relationshipLabel>Where to go</relationshipLabel>
        <relationshipName>Where_to_go</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>W_Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Diving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>W_Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W_Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W_When__c</fullName>
        <label>When</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>W_Where_to_go__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Where to go is within another place.</inlineHelpText>
        <label>Where to go</label>
        <referenceTo>Where_to_go__c</referenceTo>
        <relationshipLabel>Where to go</relationshipLabel>
        <relationshipName>Where_to_go</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Where to go</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>W_Archive__c</columns>
        <columns>W_Continent__c</columns>
        <columns>W_Country__c</columns>
        <columns>W_Interest__c</columns>
        <columns>W_When__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OTUK</fullName>
        <columns>NAME</columns>
        <columns>W_Continent__c</columns>
        <columns>W_Country__c</columns>
        <columns>W_Interest__c</columns>
        <columns>W_When__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>W_Country__c</field>
            <operation>equals</operation>
            <value>England,UK,United Kingdom,Wales</value>
        </filters>
        <label>OTUK</label>
    </listViews>
    <nameField>
        <label>Where to go Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Where to go</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>